--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
-    "lint":"eslint"
+    "lint": "eslint"
   },
   "author": "Shubhendra Singh Chauhan",
   "license": "MIT",
   "dependencies": {
+    "eslint-plugin-socket-io": "0.0.2",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "socket.io": "^2.3.0"
