--- a/.github/ISSUE_TEMPLATE/ansible.yml
+++ b/.github/ISSUE_TEMPLATE/ansible.yml
@@ -8,35 +8,15 @@ body:
 - type: markdown
   attributes:
     value: >
-      **Thank you for wanting to report a problem with ansible-core
-      documentation!**
-
-
-      Please fill out your suggestions below. If the problem seems
-      straightforward, feel free to go ahead and
-      [submit a pull request] instead!
-
-
-      ⚠
-      Verify first that your issue is not [already reported on
-      GitHub][issue search].
-
-      Also test if the latest release and devel branch are affected too.
-
-
-      **Tip:** If you are seeking community support, please consider
-      [starting a mailing list thread or chatting in IRC][ML||IRC].
-
-
-      [ML||IRC]:
-      https://docs.ansible.com/ansible-core/devel/community/communication.html?utm_medium=github&utm_source=issue_form--documentation_report.yml#mailing-list-information
-
-      [issue search]: ../search?q=is%3Aissue&type=issues
-
-      [submit a pull request]:
-      https://docs.ansible.com/ansible-core/devel/community/documentation_contributions.html
-
-
+      **Thank you for wanting to report a problem with ToolJet documentation!**
+        Please fill out your suggestions below.
+        ⚠
+        Verify first that your issue is not [already reported on
+        GitHub][issue search].
+        **Tip:** If you are seeking community support, please consider
+        [joining Slack community][Slack community].
+        [Slack community]: https://join.slack.com/t/tooljet/shared_invite/zt-r2neyfcw-KD1COL6t2kgVTlTtAV5rtg
+        [issue search]: ../search?q=is%3Aissue&type=issues
 - type: textarea
   attributes:
     label: Summary
