--- a/.github/ISSUE_TEMPLATE/ansible.yml
+++ b/.github/ISSUE_TEMPLATE/ansible.yml
@@ -10,13 +10,14 @@ body:
     value: >
       **Thank you for wanting to report a problem with ToolJet documentation!**
         Please fill out your suggestions below.
-        ⚠
-        Verify first that your issue is not [already reported on
-        GitHub][issue search].
-        **Tip:** If you are seeking community support, please consider
-        [joining Slack community][Slack community].
+        
+        ⚠ Verify first that your issue is not [already reported on GitHub][issue search].
+        **Tip:** If you are seeking community support, please consider [joining Slack community][Slack community].
+        
         [Slack community]: https://join.slack.com/t/tooljet/shared_invite/zt-r2neyfcw-KD1COL6t2kgVTlTtAV5rtg
+        
         [issue search]: ../search?q=is%3Aissue&type=issues
+        
 - type: textarea
   attributes:
     label: Summary
