--- a/.github/ISSUE_TEMPLATE/ansible.yml
+++ b/.github/ISSUE_TEMPLATE/ansible.yml
@@ -52,25 +52,14 @@ body:
 
 - type: textarea
   attributes:
-    label: Ansible Version
+    label: Steps to reproduce the issue
     description: >-
-      Paste verbatim output from `ansible --version` below, under
-      the prompt line. Please don't wrap it with tripple backticks — your
-      whole input will be turned into a code snippet automatically.
+      Provide step by step instructions to reproduce the issue
     render: console
     value: |
       $ ansible --version
-    placeholder: |
-      $ ansible --version
-      ansible [core 2.11.0b4.post0]  (detached HEAD ref: refs/) last updated 2021/04/02 00:33:35 (GMT +200)
-        config file = None
-        configured module search path = ['~/.ansible/plugins/modules', '/usr/share/ansible/plugins/modules']
-        ansible python module location = ~/src/github/ansible/ansible/lib/ansible
-        ansible collection location = ~/.ansible/collections:/usr/share/ansible/collections
-        executable location = bin/ansible
-        python version = 3.9.0 (default, Oct 26 2020, 13:08:59) [GCC 10.2.0]
-        jinja version = 2.11.3
-        libyaml = True
+    placeholder: >-
+    1. Open docs, 2. Go to Google Sheet datasource, 3. click on right sidebar...
   validations:
     required: true
 
