--- a/.github/ISSUE_TEMPLATE/ansible.yml
+++ b/.github/ISSUE_TEMPLATE/ansible.yml
@@ -58,7 +58,7 @@ body:
     placeholder: >-
       1. Open docs, 2. Go to Google Sheet datasource, 3. click on right sidebar...
   validations:
-    required: true
+    required: false
 
 - type: textarea
   attributes:
